--- a/README
+++ b/README
@@ -1,17 +1,12 @@
 Graph Fragment Language for Easy Syntactic Annotation
 =====================================================
 
-Lightweight dependency-style annotations, featuring multiwords and latent nodes.
-by Chris Dyer, Brendan O'Connor, David Bamman; Carnegie Mellon University.
-
-This is pre-alpha and not ready for anything real!
-And we aren't done with the document that actually describes all this.
-But the directories are:
+Software to support a lightweight dependency-style annotation language.
+by Nathan Schneider, Brendan O'Connor, Naomi Saphra, and Chris Dyer.
 
 parser/ -- a parser for the GFL annotations format.
 scripts/ -- a tool for checking and visualizing them, in GraphViz.
 anno/   -- some annotated sentences.
-
 
 Getting started
 ===============
